Fix logout align navbar.

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -58,7 +58,6 @@ a.desc:after {
 
 /* align the logout "link" (button in form) of the navbar */
 .nav li > form > button.logout {
-    padding-top: 7px;
     color: var(--bs-navbar-color);
 }
 
